Fixed issue with scrollbar appearing on images.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -283,7 +283,6 @@ div .linkedindiv {
     }
     .imagewrapper{
         clear:both;
-        overflow: auto;
         height: auto;
         max-width: 50%;
     }
